--- a/01.syllabus.md
+++ b/01.syllabus.md
@@ -24,8 +24,7 @@ All computer science majors are required to complete a Capstone Experience prior
 Your requirements will depend on which capstone course you are attending
 
 ## CS 1900
-* Final Paper - A report on your internship experiences.
-* Presentation - A presentation on your internship experiences.
+Check the [page for CS1900 and CS1950]({{site.baseurl}}/CS1900_1950).
 
 ## CS 1950
 * Final Paper - A report on your research experiences.
