--- a/01.syllabus.md
+++ b/01.syllabus.md
@@ -13,7 +13,7 @@ All computer science majors are required to complete a Capstone Experience prior
 ## Why? 	
 
 * Students are given the opportunity to apply their newly gained knowledge in the field of Computer Science to a non-trivial, real-world project, either in industry or research
-* Students are able to see and discuss each other’s work, thereby showing them the diversity of areas in the field of Computer Science
+* Students are able to see and discuss each other's work, thereby showing them the diversity of areas in the field of Computer Science
 * Students gain experience in presenting before an informed audience and in answering questions about their work
 * Students gain experience in technical writing
 
