--- a/00.course-outline.md
+++ b/00.course-outline.md
@@ -7,17 +7,17 @@ permalink: /outline/
 **Taught by:** Luis Oliveira and Wonsun Ahn
 
 ## CS1980 and CS1640
-**Room**:
+**Location**:
   - IS 404
 
 **Time**: Fridays 1:00 - 2:50 (project)
 
 ## CS1900 and CS1950
-**Room**
-  - IS 411
+**Location**
+  - Zoom meetings through Canvas
 
 **Time**
-  - Fridays 1:00 - 1:50
+  - Fridays l2:10 - 1:00
 
 
 ## Office hours
@@ -32,8 +32,8 @@ permalink: /outline/
 
 **Wonsun Ahn's Office Hours:**
 
-  * Room: 5423 Sennott Square
-  * Tue 3:00 PM - 5:00 PM, Fri 2:00 PM - 4:00 PM
+  * Location: Microsoft Teams
+  * Time: TBD
 
 
 ## Information for CS1900 and CS1950 students
