--- a/02.internships_main.markdown
+++ b/02.internships_main.markdown
@@ -9,7 +9,7 @@ permalink: /CS1900_1950/
 You have five responsibilities this term:
 
 1. Give a 10 minute presentation on your work with 2 minutes q&a.  See [Presentation organization](#presentation-organization).
-   * Also come up with a question your classmates should be able to answer after listening to your presentation.
+   * Also come up with a question your classmates should be able to answer after your presentation.
 
 2. Write a final paper.  See [Final paper organization](#final-paper-organization).
 
