--- a/02.internships_main.markdown
+++ b/02.internships_main.markdown
@@ -19,7 +19,7 @@ You have five responsibilities this term:
 
 ## Presentation organization
 
-1. Please sign up for a presentation date ASAP using one of the below Doodle polls.  The deadline is 8/28 (Friday).
+1. Please sign up for a presentation date ASAP using one of the below Doodle polls.  The deadline is **8/28 (Friday)**.  If you do not submit the poll, an arbitrary date will be chosen for you.
    * [Doodle poll for Wonsun's class]
    * [Doodle poll for Luis' class]
 
@@ -55,7 +55,7 @@ multiple choice question or a fill-in-the-blank question.
 
 ## Final paper organization
 
-Write a 8 - 12 page paper on your internship experience.  For details, see the [Final Paper Instructions]({{site.baseurl}}/final_paper).  PDF format is preferred.  The paper should be submitted to courseweb by midnight of **24 NOVEMBER**.  Please consider submitting the paper earlier to get feedback.
+Write a 8 - 12 page paper on your internship experience.  For details, see the [Final Paper Instructions]({{site.baseurl}}/final_paper).  PDF format is preferred.  The paper should be submitted to courseweb by midnight of **11/24**.  Please consider submitting the paper earlier to get feedback.
 
 Most of the things I said about presentations is also relevant to the report, and also there is an example outline of the report on the final slide.  Feel free to use your own organization if you'd like but it should contain all the major components.
 
