Updates syllabus and projects

--- a/01.syllabus.md
+++ b/01.syllabus.md
@@ -54,6 +54,27 @@ Cheating/plagiarism will not be tolerated. Students suspected of violating the U
 If you have a disability for which you are or may be requesting an accommodation, you are encouraged to contact the [Office of Disability Resources and Services](https://www.studentaffairs.pitt.edu/drs/) (DRS), 140 William Pitt Union (412-648-7890) (TTY 412-383-7355), as soon as possible in the term. They will verify your disability and determine reasonable accommodations for this course.
 
 
+# Health and Safety Statement
+
+In the midst of this pandemic, it is extremely important that you abide by public health regulations and University of Pittsburgh health standards and guidelines. While in class, at a minimum this means that you must wear a face covering and comply with physical distancing requirements; other requirements may be added by the University during the semester. These rules have been developed to protect the health and safety of all community members. Failure to comply with these requirements will result in you not being permitted to attend class in person and could result in a Student Conduct violation. For the most up-to-date information and guidance, please visit coronavirus.pitt.edu and check your Pitt email for updates before each class.
+
+
+# Take Care of Yourself
+
+Do your best to maintain a healthy lifestyle this semester by eating well, exercising, avoiding drugs and alcohol, getting enough sleep, and taking time to relax. Despite what you might hear, using your time to take care of yourself will actually help you achieve your academic goals more than spending too much time studying. All of us benefit from support and guidance during times of struggle. There are many helpful resources available at Pitt. An important part of the college experience is learning how to ask for help. Take the time to learn about all that’s available and take advantage of it. Ask for support sooner rather than later –this always helps. If you or anyone you know experiences any academic stress, difficult life events, or difficult feelings like anxiety or depression, we strongly encourage you to seek support. Consider reaching out to a friend, faculty or family member you trust for assistance connecting to the support that can help.
+
+The University Counseling Center is here for you: call 412-648-7930 and visit their website.
+
+If you or someone you know is feeling suicidal, call someone immediately, day or night:
+- University Counseling Center (UCC): 412 648-7930
+- University Counseling Center Mental Health Crisis Response:  412-648-7930 x1
+- Resolve Crisis Network: 888-796-8226 (888-7-YOU-CAN)
+
+If the situation is life threatening, call the Police:
+- On-campus: Pitt Police: 412-268-2121
+- Off-campus: 911
+
+
 ## File Backups
 It is your responsibility to backup your work regularly. Please consider using reliable and multiple ways to protect your files! **I.e.: Please make backups, and backups of your backups, and...** (you get the point!)
 
