--- a/00.course-outline.md
+++ b/00.course-outline.md
@@ -8,17 +8,17 @@ permalink: /outline/
 
 ## CS1980 and CS1640
 **Location**:
-  - IS 404
+  - Zoom meetings through Canvas
 
-**Time**: Fridays 1:00 - 2:50 (project)
+**Time**: Fridays 2:20 - 4:10
 
 ## CS1900 and CS1950
 **Location**
   - Zoom meetings through Canvas
 
 **Time**
-  - Fridays l2:10 - 1:00
-
+  - Fridays l2:10 - 1:00 (Wonsun Ahn)
+  - Fridays l3:15 - 1:05 (Luis Oliveira)
 
 ## Office hours
 
@@ -26,9 +26,7 @@ permalink: /outline/
   * e-mail: loliveira@pitt.edu
   * Room: 5421 Sennott Square
     - **Slack**: Just ask your questions there! (Ask me to add you, if I haven't yet)
-    - **Monday** 14:00 - 16:00
-    - **Tuesday** 10:45 - 12:00
-    - **Thursday** 10:45 - 12:00
+    - **TBD**
 
 **Wonsun Ahn's Office Hours:**
 
