--- a/02.internships_main.markdown
+++ b/02.internships_main.markdown
@@ -25,11 +25,11 @@ If you submit your final paper at least one week before the deadline, you will b
 
 1. Please sign up for a presentation date ASAP using one of the below Doodle polls.  The deadline is **8/28 (Friday)**.  If you do not submit the poll, an arbitrary date will be chosen for you.
    * [Doodle poll for 12:10 PM - 1:00 PM class (CS 1900-1010 or CS 1950-1010)]
-   * [Doodle poll for 1:15 PM - 2:05 PM class (CS 1900-1060 or CS 1950-1060)] <br/><br/>
+   * [Doodle poll for 13:15 PM - 14:05 PM class (CS 1900-1060 or CS 1950-1060)] <br/><br/>
 
 2. These are the expected lengths of your presentation depending on the section you signed up with:
    * 12:10 PM - 1:00 PM class (CS 1900-1010 or CS 1950-1010): 9 minute presentation with 2 minutes Q&A
-   * 1:15 PM - 2:05 PM class (CS 1900-1060 or CS 1950-1060): TBD <br/><br/>
+   * 1:15 PM - 2:05 PM class (CS 1900-1060 or CS 1950-1060): 9 minute presentation with 2 minutes Q&A <br/><br/>
 
 3. Please review [lecture on presentations]({{site.baseurl}}/lectures/lecture-on-presentations-internship.pdf) before giving your presentation.  
 
@@ -40,13 +40,13 @@ classmates.  The preferred format is PDF or Powerpoint.
 
 5. Presenters must also submit a presentation question to the "Presentation
    Question" assignment on Canvas by Thursday midnight.  The purpose of this
-question is two fold: 1) To force the presenter to think about what he/she
-expects the audience to learn from the presentation and 2) To measure how
+question is two fold: 1) To force the presenter to think about what they
+expect the audience to learn from the presentation and 2) To measure how
 successful the presenter was in conveying the concept.  Choose between a
 multiple choice question or a fill-in-the-blank question.
 
    [Multiple choice example]
-  
+
    Q: Which color is not represented in the RGB color model?  
    a) Red  
    b) Green  
