--- a/02.internships_main.markdown
+++ b/02.internships_main.markdown
@@ -24,7 +24,7 @@ If you submit your final paper at least one week before the deadline, you will b
 ## Presentation organization
 
 1. Please sign up for a presentation date ASAP using one of the below Doodle polls.  The deadline is **8/28 (Friday)**.  If you do not submit the poll, an arbitrary date will be chosen for you.
-   * [Doodle poll for 12:10 PM - 1:00 PM class (CS 1900-1010 or CS 1950-1010)]
+   * [Doodle poll for 12:10 PM - 1:00 PM class (CS 1900-1010 or CS 1950-1010)](https://doodle.com/poll/ngzpvqb34rgegrq8)
    * [Doodle poll for 13:15 PM - 14:05 PM class (CS 1900-1060 or CS 1950-1060)] <br/><br/>
 
 2. These are the expected lengths of your presentation depending on the section you signed up with:
