--- a/02.internships_main.markdown
+++ b/02.internships_main.markdown
@@ -63,9 +63,7 @@ multiple choice question or a fill-in-the-blank question.
 
 ## Final paper organization
 
-Write a 8 - 12 page paper on your internship experience.  For details, see the [Final Paper Instructions]({{site.baseurl}}/final_paper).  PDF format is preferred.  The paper should be submitted to courseweb by midnight of **11/24**.  Please consider submitting the paper earlier to get feedback.
-
-Most of the things I said about presentations is also relevant to the report, and also there is an example outline of the report on the final slide.  Feel free to use your own organization if you'd like but it should contain all the major components.
+Write a 8 - 12 page paper on your internship experience.  For details, see the [Final Paper Instructions]({{site.baseurl}}/final_paper).  PDF format is preferred.  The paper should be submitted to Canvas by midnight of **11/24**.  Please consider submitting the paper earlier to get feedback.
 
 ## Peer review organization
 
@@ -85,8 +83,7 @@ grade.  The instructor will make the final determination on the quality of the
 presentation.
 
 The peer reviews will be made available as feedback on the "Presentation
-Slides" assignment.  It will be attached as a .xlsx Excel file.  Also, the
-instructor will add some more comments in the feedback comment box.
+Slides" assignment.  It will be attached as a .xlsx Excel file.
 
 ## Attendance
 
