--- a/01.syllabus.md
+++ b/01.syllabus.md
@@ -23,12 +23,13 @@ All computer science majors are required to complete a Capstone Experience prior
 
 Your requirements will depend on which capstone course you are attending
 
-## CS 1900
-Check the [page for CS1900 and CS1950]({{site.baseurl}}/CS1900_1950).
+## CS 1900/1950
+* Final Paper - A report on your internship/research experiences.
+* Presentation - A presentation on your internship/research experiences.
+* Peer Review - Weekly peer review of your classmates' presentations.
+* Progress Reports (CS 1950 only) - Weekly progress report emails to research advisor and instructor.
 
-## CS 1950
-* Final Paper - A report on your research experiences.
-* Presentation - A presentation on your research experiences.
+Check the [page for CS1900 and CS1950]({{site.baseurl}}/CS1900_1950) for details.
 
 ## CS 1980/1640
 If you are developing a project in one of these courses, then you'll have to respect these requirements:
